--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,12 @@
-target/
-.idea/
+.gradle
+gradle
+build
+*/out
 *.iml
 *.ipr
 *.iws
-*.log
-.classpath
-.project
-maven-eclipse.xml
-.settings/
-.externalToolBuilders
-logs/
-tmp/*
-.DS_Store
-*.tar.gz
+logs
+out
+gradlew.bat
+gradlew
+.idea
